k8s/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kalink-studio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/auth-realm: "Authentication required"
    nginx.ingress.kubernetes.io/auth-secret: kalink-studio-staging-basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
spec:
  tls:
    - hosts:
        - staging.kalink.ch
      secretName: kalink-studio-staging-tls
  rules:
    - host: staging.kalink.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kalink-studio
                port:
                  number: 3000
